# simple-chatgpt-cli

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  tox.ini
chatgpt/: main.py
chatgpt_cli/: main.py
openai_api_test/: main.py
