[tool.docformatter]
recursive = true
wrap-summaries = 88
wrap-descriptions = 88

[tool.poetry]
name = "openai-api-test"
version = "0.1.0"
description = ""
authors = ["tailaiw <29800495+tailaiw@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "openai_api_test"}]

[tool.poetry.dependencies]
python = "3.10.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
docformatter = {extras = ["tomli"], version = "^1.6.5"}
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
