[tool.docformatter]
recursive = true
wrap-summaries = 88
wrap-descriptions = 88

[tool.poetry.scripts]
chatgpt = 'chatgpt_cli.main:run'

[tool.poetry]
name = "simple-chatgpt-cli"
version = "0.1.8"
description = ""
authors = ["tailaiw <29800495+tailaiw@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "chatgpt_cli" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openai = "^0.27.6"
rich = "^13.3.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
docformatter = { extras = ["tomli"], version = "^1.6.5" }
mypy = "^1.3.0"
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
